--- a/submit/prj1-sol/README
+++ b/submit/prj1-sol/README
@@ -1,6 +1,6 @@
-Name:		XXX
-B-Number:	XXX
-Email:		XXX
+Name:		Shweta Sharad Mestry
+B-Number:	B00815342
+Email:		smestry1@binghamton.edu
 
-Add text here as needed.
+Working code. Satisfies given log file.
 
