--- a/submit/prj2-sol/README
+++ b/submit/prj2-sol/README
@@ -2,5 +2,5 @@ Name:		Shweta Sharad Mestry
 B-Number:	B00815342
 Email:		smestry1@binghamton.edu
 
-Add text here as needed.
+I have taken a reference from provided prj1-sol solution.
 
