--- a/submit/prj3-sol/README
+++ b/submit/prj3-sol/README
@@ -1,6 +1,7 @@
-Name:		XXX
-B-Number:	XXX
-Email:		XXX
+Name:		Shweta Sharad Mestry
+B-Number:	B00815342
+Email:		smestry1@binghamton.edu
 
-Add text here as needed.
+Refer one website to fetch querystring parameters from URL.
+https://dev.to/ganeshmani/how-to-get-query-string-parameters-in-javascript-2019-4dm2
 
