--- a/submit/prj1-sol/README
+++ b/submit/prj1-sol/README
@@ -4,3 +4,21 @@ Email:		smestry1@binghamton.edu
 
 Working code. Satisfies given log file.
 
+Description for Prj1-Sol:
+This project involves reading and querying blog data stored entirely in memory. The data is organized in three categories:
+Users The people associated with the blog. Each person can have one-or-more roles of admin, author or commenter (the admin role is not used in this project). Each user is identified using an externally generated id.
+Articles The blog articles. Will have title and content fields, an authorId fields identifying the author and a list of keywords. Each article is identied using an internally generated id.
+Comments Comments associated with each blog article. A comment will have associated content. A comment will be associated with its corresponding article using its articleId fields and its commenter using its commenterId field. Each article is identified using an internally generated id.
+All data item in each category have creationTime and updateTime timestamps.
+It is possible to perform the following actions on the blog:
+Create Create a data item in a specific category.
+Find Find zero-or-more data items in a specific category.
+Remove Remove a data item in a specific category.
+Update Update a data item in a specific category.
+Clear Clear all data items in all categories.
+All of the actions (except for clear) take an object as an argument specifying the details of the action.
+The data model should become absolutely clear after looking at the provided meta information.
+
+Features:
+1. Used non-trivial JavaScript Program
+2. Designed an in-memory indexing scheme
