Demo Files added

--- a/submit/prj4-sol/README
+++ b/submit/prj4-sol/README
@@ -2,5 +2,14 @@ Name:		Shweta Sharad Mestry
 B-Number:	B00815342
 Email:		smestry1@binghamton.edu
 
+# Demo
+
+List Users:
+
+![](ListUsers.gif)
+
+Search User:
+
+![](SearchUser.gif)
 
 
