--- a/submit/prj4-sol/README
+++ b/submit/prj4-sol/README
@@ -6,10 +6,10 @@ Email:		smestry1@binghamton.edu
 
 List Users:
 
-![](ListUsers.gif)
+![](Demo/ListUsers.gif)
 
 Search User:
 
-![](SearchUser.gif)
+![](Demo/SearchUser.gif)
 
 
